# rustsbi-xs

./: Cargo.toml  LICENSE  README.md  build.rs  justfile  link-xs.ld
.cargo/: config.toml
src/: main.rs
