[package]
name = "rustsbi-xs"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = { git = "https://github.com/luojia65/rustsbi" }
buddy_system_allocator = "0.6.0"
riscv = { git = "https://github.com/rust-embedded/riscv", features = ["inline-asm"] }
spin = "0.7"
ansi_rgb = "0.2.0"
xs-hal = { path = "../xs-hal" }
embedded-hal = "1.0.0-alpha.1"
nb = "1"